--- a/index1.html
+++ b/index1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>WWashington's First Coding Webpage!</title>
+		<title>Washington's Webpage!</title>
 		<style>
 			h1 {
 				text-align: center;
