--- a/index1.html
+++ b/index1.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html>
 	<head>
 		<title>Washington's Webpage!</title>
@@ -27,7 +26,7 @@
 		<img src="https://i1.sndcdn.com/avatars-000333092868-dkqsy7-t500x500.jpg"> 
 			<a target="_blank" href="https://soundcloud.com/dontefryar">G.T.H. SoundCloud Link </a> 
 
-		<p> This is a vision of mine to do a 6-week summer tour beginning, June 20th - Auguest 1st for Artist, <strong><e>G.T.H. </strong></e> <p>
+		<p> This is a vision of mine to do a 6-week summer tour beginning, June 20th - Auguest 1st for Artist, <strong> G.T.H. </strong>
 		<p> We will first need a Driver over the age of 25 to operate a 12 passenger vehicle (plan is to have 9 people accompany us on this tour to minimize expense and maximize space) Driver position is appointed to <strong> Kintasha </strong> as she meets age requirements to rent.</p>
 		<p> Below you will find a link to 12 passenger rental vehicles <p>
 	<a target="_blank" href="https://reservations.valueautorental.com/rates?action=vehicle_and_rates"> Vehicle Rates </a>
